# image_codec

./: .gitignore  CNNImageCodec.py  EntropyCodec.py  EntropyCompile.bat  EntropySetup.py  Makefile  README.md  config.py  pyproject.toml
decoder.mdl/: fingerprint.pb  keras_metadata.pb  saved_model.pb
decoder.mdl/variables/: variables.data-00000-of-00001  variables.index
encoder.mdl/: fingerprint.pb  keras_metadata.pb  saved_model.pb
encoder.mdl/variables/: variables.data-00000-of-00001  variables.index
notebooks/: train_colab.ipynb
scripts/: prepare_colab_environment.sh
solution/: __main__.py  config.py  dataset_loader.py  entropy_model.py  metrics.py  model.py  pipeline.py  utils.py
solution/entropy_codec/: CNNImageCodec.py  EntropyCodec.py  EntropySetup.py
solution/models/: base_auto_encoder_model.py  base_model.py  residual_model.py  some_model.py  stride_model.py  vae_model.py
tests/: conftest.py  test_model.py  test_stride_model.py  test_vae.py
weights/simple_auto_encoder/epoch_599/: simple_auto_encoder.pth
